--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 permalink: /
 ---
 
-{% include portfolio.html title="LATEST WORKS" limit=10 %}
+{% include portfolio.html title="Projects" limit=10 %}
 
 <div class="container mtb">
     <div class="row">
