--- a/index.html
+++ b/index.html
@@ -6,21 +6,27 @@ permalink: /
 
 <!-- {% include portfolio.html title="Projects" limit=10 %} -->
 
-<div class="container mtb">
-    <div class="row">
-        <div class="col-lg-7 col-lg-offset-1">
-            <h4>About Me.</h4>
-            <p>{{ site.about }}</p>
-            <p><br/><a href="{{ "/about/" | prepend: site.baseurl }}" class="btn btn-theme">More Info</a></p>
-        </div>
+<div class="container">
+<div class="row">
+  <div class="col-lg-4 col-lg-offset-1 intro-message">
+      <h1>Paul Staab</h1>
+      <h2>Biostatistican, Programmer, Paramedic.</h2>
+      <!-- <hr class="intro-divider"> -->
+      <ul class="list-inline intro-social-buttons">
+        <li>
+          <a href="https://github.com/paulstaab" class="btn btn-default btn-lg">
+          <i class="fa fa-github fa-fw"></i></a>
+        </li>
+        <li>
+          <a href="https://plus.google.com/+PaulStaab" class="btn btn-default btn-lg">
+          <i class="fa fa-google-plus fa-fw"></i></a>
+        </li>
+        <li>
+          <a href="https://de.linkedin.com/in/paulstaab" class="btn btn-default btn-lg">
+          <i class="fa fa-linkedin fa-fw"></i></a>
+        </li>
+      </ul>
+  </div>
+</div>
+</div>
 
-        <div class="col-lg-3">
-            <h4>Latest Posts</h4>
-            <div class="hline"></div>
-            {% for post in site.categories['blog'] limit:5 %} 
-                <p><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></p>
-            {% endfor %} 
-        </div>
-
-    </div><! --/row -->
-</div><! --/container -->
