--- a/science.html
+++ b/science.html
@@ -10,17 +10,10 @@ image:
 
 {% include wrap.html %}
 
-<div class="container mtb">
+<div class="science-papers bgimg">
+<div class="container">
     <div class="row">
-        <div class="col-lg-5">
-            <img class="img-responsive" src="{{ "/assets/img/science.jpg" | prepend: site.baseurl }}" alt="">
-            <small>
-              By <a href='https://www.flickr.com/photos/mars_p/'>Mars P.</a>,
-              <a href='https://creativecommons.org/licenses/by/2.0'>CC BY 2.0</a>, 
-              unmodified.
-            </small>
-        </div>
-        <div class="col-lg-7">
+        <div class="col-lg-7 col-lg-offset-5 transparent">
           <h2>Latest Publications</h2>
           {% for paper in site.categories['publication'] limit:5 %}
              <! -- Publication -->
@@ -35,20 +28,53 @@ image:
         </div>
     </div><! --/row -->
 </div>
+<span class="bgimgcredits">Image by <a href='https://www.flickr.com/photos/mars_p/'>Mars P.</a>,
+                           <a href='https://creativecommons.org/licenses/by/2.0'>CC BY 2.0</a>,
+                           unmodified.</span>
+</div>
+
+<div class="science-software bgimg">
+<div class="container">
+    <div class="row">
+        <div class="col-lg-7 transparent">
+        <h2>Software</h2>
+        <p>I am involved in the development of the following software
+        projects:</p>
+        <p><h3>Jaatha</h3>
+           A simulation based composite-likelihood method to fit 
+           an evolutionary model to genetic data.
+           <br>
+           <a href="http://evol.bio.lmu.de/_statgen/software/jaatha">[Link]</a> 
+           <a href="http://cran.r-project.org/web/packages/jaatha">[CRAN]</a> 
+           <a href="https://github.com/paulstaab/jaatha">[Source]</a> 
+        </p>
+        <p><h3>scrm</h3>
+           An efficient coalescent simulator for genome-scale sequences.
+           <br>
+           <a href="https://scrm.github.io">[Link]</a> 
+           <a href="https://github.com/scrm/scrm">[Source]</a> 
+        </p>
+        <p><h3>mrj</h3>
+           Simulates a population of haploids undergoing 
+           <a href="https://secure.wikimedia.org/wikipedia/en/wiki/Muller%27s_ratchet">Muller's Ratchet</a>.
+           Capable of compensatory mutations. 
+           <br>
+           <a href="/dl/science/mrj.jar">[Runnable jar file]</a> 
+           <a href="/dl/science/mrj-src.tar.gz">[Source]</a>
+        </p>
+        <p><h3>SynBioWave</h3>
+           A collaborative synthetic biological software suite, based on
+           discontinued Google Wave.
+           <br>
+           <a href="http://www.synbiowave.org">[Link]</a>
+        </p>
+        </div>
+    </div>
+</div>
+</div>
 
 
 <!--
-## Software
-- [**Jaatha**](http://evol.bio.lmu.de/_statgen/software/jaatha/). 
-  A simulation based composite-likelihood method to fix an evolutionary model to genetic data.
-- [**scrm**](https://scrm.github.io).
-  An efficient coalescent simulator for genome-scale sequences.
-- **mrj – Muller’s ratchet in Java**. 
-  Simulates a population of haploids undergoing 
-  [Muller's Ratchet](https://secure.wikimedia.org/wikipedia/en/wiki/Muller%27s_ratchet)
-  Capable of compensatory mutations. [Runnable jar file](/dl/science/mrj.jar) – [Source Code](/dl/science/mrj-src.tar.gz)
-- [**SynBioWave**](http://www.synbiowave.org).
-    A collaborative synthetic biological software suite, based on
-    discontinued Google Wave.
+- 
 -->
 
