--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ permalink: /
           <i class="fa fa-github fa-fw"></i></a>
         </li>
         <li>
-          <a href="https://plus.google.com/+PaulStaab" class="btn btn-default btn-lg">
-          <i class="fa fa-google-plus fa-fw"></i></a>
+          <a href="https://twitter.com/paulstaab" class="btn btn-default btn-lg">
+          <i class="fa fa-twitter fa-fw"></i></a>
         </li>
         <li>
           <a href="https://de.linkedin.com/in/paulstaab" class="btn btn-default btn-lg">
