improve vertical spacing

--- a/science.html
+++ b/science.html
@@ -10,7 +10,7 @@ image:
 
 {% include wrap.html %}
 
-<div class="container mtb">
+<div class="container">
   <div class="row">
     <div class="jumbotron">
       <h2>Publications</h2>
@@ -31,7 +31,9 @@ image:
           Complete list at Google Scholar</a></p></center>
     </div>
   </div>
+</div>
 
+<div class="container mtb">
   <div class="row">
     <div class="jumbotron">
       <h2>Software</h2>
