add links to software

--- a/science.html
+++ b/science.html
@@ -38,7 +38,8 @@ image:
     <div class="jumbotron">
       <h2>Software</h2>
     </div>
-    <div class="col-sm-6 col-md-3"><h3>Jaatha</h3>
+    <div class="col-sm-6 col-md-3">
+      <h3><a href="http://evol.bio.lmu.de/_statgen/software/jaatha">Jaatha</a></h3>
       A simulation based composite-likelihood method to fit 
       an evolutionary model to genetic data.
       <br>
@@ -46,7 +47,8 @@ image:
       <a href="http://cran.r-project.org/web/packages/jaatha">[CRAN]</a> 
       <a href="https://github.com/paulstaab/jaatha">[Source]</a> 
     </div>
-    <div class="col-sm-6 col-md-3"><h3>scrm</h3>
+    <div class="col-sm-6 col-md-3">
+      <h3><a href="https://scrm.github.io">scrm</a></h3>
       An efficient coalescent simulator for genome-scale sequences.
       <br>
       <a href="https://scrm.github.io">[Link]</a> 
@@ -60,7 +62,8 @@ image:
       <a href="/dl/science/mrj.jar">[Runnable jar file]</a> 
       <a href="/dl/science/mrj-src.tar.gz">[Source]</a>
     </div>
-    <div class="col-sm-6 col-md-3"><h3>SynBioWave</h3>
+    <div class="col-sm-6 col-md-3">
+      <h3><a href="http://www.synbiowave.org">SynBioWave</a></h3>
       A collaborative synthetic biological software suite, based on
       discontinued Google Wave.
       <br>
