point mrj links to github

--- a/science.html
+++ b/science.html
@@ -59,8 +59,8 @@ image:
       <a href="https://secure.wikimedia.org/wikipedia/en/wiki/Muller%27s_ratchet">Muller's Ratchet</a>.
       Capable of compensatory mutations. 
       <br>
-      <a href="/dl/science/mrj.jar">[Runnable jar file]</a> 
-      <a href="/dl/science/mrj-src.tar.gz">[Source]</a>
+      <a href="https://github.com/paulstaab/mrj">[Source]</a>
+      <a href="https://github.com/paulstaab/mrj/releases/download/v1.0/mrj.jar">[Runnable jar file]</a> 
     </div>
     <div class="col-sm-6 col-md-3">
       <h3><a href="http://www.synbiowave.org">SynBioWave</a></h3>
