--- a/blog.html
+++ b/blog.html
@@ -12,10 +12,13 @@ permalink: /blog/
 
             {% for post in site.categories['blog'] %}
                 <! -- Blog Post -->
-                {% if post.img %}
+                {% if post.img.file %}
                 <a href="{{ post.url | prepend: site.baseurl }}">
-                    <img class="img-responsive" src="{{ "/assets/img/blog/" | prepend: site.baseurl }}{{ post.img }}">
-                </a>    
+                    <img class="img-responsive" src="{{ "/assets/img/blog/" | prepend: site.baseurl }}{{ post.img.file }}">
+                </a>
+                <csmall class="img">Picture by <a href="{{ post.img.link }}">{{ post.img.credit }}</a>,  
+                            <a href="{{ post.img.license-link }}">{{ post.img.license }}</a>, 
+                            {{ post.img.comment }}</csmall>
                 {% endif %}
                 <a href="{{ post.url | prepend: site.baseurl }}"><h3 class="ctitle">{{ post.title }}</h3></a>
                 <p><csmall>{{ post.date | date: "%b %-d, %Y" }}. | By: {{ post.author }}</csmall></p>
