redesign start page

--- a/index.html
+++ b/index.html
@@ -6,26 +6,53 @@ permalink: /
 
 <!-- {% include portfolio.html title="Projects" limit=10 %} -->
 
-<div class="container">
+<div id="intro-bg"> </div>
+
+  {% raw %}
+  <script type="text/javascript">
+  var userFeed = new Instafeed(
+      { get: 'user',
+        userId: 2025139985,
+        accessToken: '2025139985.467ede5.fbb8d7c35f734b8d9b806b62dfcfbca3',
+        sortBy: 'most-recent',
+        resolution: 'standard_resolution',
+        limit: 1,
+        target: 'intro-bg',
+        template: '<img src="{{image}}"/>'
+      });
+  userFeed.run();
+  </script>
+  {% endraw %}
+
+<div class="container mtb intro-container">
 <div class="row">
-  <div class="col-lg-4 col-lg-offset-1 intro-message">
-      <h1>Paul Staab</h1>
-      <h2>Biostatistican, Programmer, Paramedic.</h2>
-      <!-- <hr class="intro-divider"> -->
-      <ul class="list-inline intro-social-buttons">
-        <li>
-          <a href="https://github.com/paulstaab" class="btn btn-default btn-lg">
-          <i class="fa fa-github fa-fw"></i></a>
-        </li>
-        <li>
-          <a href="https://twitter.com/paulstaab" class="btn btn-default btn-lg">
-          <i class="fa fa-twitter fa-fw"></i></a>
-        </li>
-        <li>
-          <a href="https://de.linkedin.com/in/paulstaab" class="btn btn-default btn-lg">
-          <i class="fa fa-linkedin fa-fw"></i></a>
-        </li>
-      </ul>
+  <div class="col-xs-10 col-sm-7 col-md-5 col-lg-4 col-xs-offset-1 intro-message">
+    <p>Hi there!</p>
+
+    <p>My name is Paul Staab. I'm currently finishing a PhD 
+       in Statistical Genetics in Munich, Germany. 
+       The <a href="{{"/science/" | prepend: site.baseurl }}">science page</a>
+       will tell you more about my work there, and my vita is on
+       <a href="https://de.linkedin.com/in/paulstaab">LinkedIn</a>.</p>
+
+    <p>I like coding, answering questions with data and combining
+       both. Currently R and C++ are my primary languages.
+       Most of what do is on 
+       <a href="https://github.com/paulstaab">GitHub</a>.</p>
+
+    <p>I volunteer as a paramedic for the 
+       <a href="http://sued1.bereitschaften.brk-muenchen.de">Red Cross</a>,
+       take <a href="{{"/photos/" | prepend: site.baseurl }}">Photos</a>,
+       hike through the Alps or drive my bike all over Munich. 
+       </p>
+
+    <p>Follow me on <a href="https://twitter.com/paulstaab">Twitter</a> and
+       <a href="https://instagram.com/paul.staab">Instagram</a>!</p>
+
+       <p>Or <a id="contact-mail">contact me</a>.</p>
+  <script type="text/javascript">
+          document.getElementById("contact-mail").href = 'mailto' + ':contact' + '@' + 'paulstaab.de';
+  </script>
   </div>
 </div>
 </div>
