remove unnessary css + js

--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@ permalink: /
        <a href="https://instagram.com/paul.staab">Instagram</a>!</p>
 
        <p>Or <a id="contact-mail">contact me</a>.</p>
-  <script type="text/javascript">
-          document.getElementById("contact-mail").href = 'mailto' + ':contact' + '@' + 'paulstaab.de';
-  </script>
+       <script type="text/javascript">document.getElementById("contact-mail").href = 'mailto' + ':contact' + '@' + 'paulstaab.' + 'de';</script>
   </div>
 </div>
 </div>
