--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ permalink: /
        <a href="https://de.linkedin.com/in/paulstaab">LinkedIn</a>.</p>
 
     <p>I like coding, answering questions with data and combining
-       both. Currently R and C++ are my primary languages.
-       Most of what do is on 
+       both. Currently <a href="https://www.r-project.org/">R</a> 
+       and C++ are my primary languages. Most of what do is on 
        <a href="https://github.com/paulstaab">GitHub</a>.</p>
 
     <p>I volunteer as a paramedic for the 
