--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ permalink: /
   <div class="col-xs-10 col-sm-7 col-md-5 col-lg-4 col-xs-offset-1 intro-message">
     <p>Hi there!</p>
 
-    <p>My name is Paul Staab. I'm currently finishing a PhD 
-       in Statistical Genetics in Munich, Germany. 
+    <p>My name is Paul Staab. I'm currently finishing a PhD in 
+       <a href="http://evol.bio.lmu.de/_statgen/">Statistical Genetics</a> in Munich, Germany. 
        The <a href="{{"/science/" | prepend: site.baseurl }}">science page</a>
        will tell you more about my work there, and my vita is on
        <a href="https://de.linkedin.com/in/paulstaab">LinkedIn</a>.</p>
