--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@ permalink: /
 
 <!-- {% include portfolio.html title="Projects" limit=10 %} -->
 
-<div id="intro-bg"> </div>
+<div id="intro-bg"> 
+<noscript><img src="{{"/assets/img/cover.jpg" | prepend: site.baseurl }}"/></noscript>
+</div>
 
   {% raw %}
   <script type="text/javascript">
