--- a/projects.html
+++ b/projects.html
@@ -7,19 +7,20 @@ permalink: /projects/
 <div class="container">
   <div class="row">
     <! -- BLOG POSTS LIST -->
-    {% for project in site.categories['projects'] %}
+    {% assign projects = site.projects | sort: "date_start" %}
+    {% for project in projects %}
     <div class="col-md-4">
       {% if project.url %}
-      <h2><a href="{{ project.url  }}">{{ project.title }}</a></h2>
+      <h2><a href="{{ project.url | prepend: site.baseurl }}">{{ project.title }}</a></h2>
       {% else %}
       <h2>{{ project.title }}</h2>
       {% endif %}
 
-      <p><i>{{ project.type }} ({{ project.role }})</i></p>
+      <p><i>{{ project.type }}</i></p>
       <p>{{ project.description }}</p>
 
-      {% if project.url %}
-      <a href="{{ project.url  }}"><button type="button" class="btn btn-default fa fa-external-link"></button></a>
+      {% if project.website %}
+      <a href="{{ project.website  }}"><button type="button" class="btn btn-default fa fa-external-link"></button></a>
       {% endif %}
       {% if project.github %}
       <a href="https://github.com/{{ project.github  }}"><button type="button" class="btn btn-default fa fa-github"></button></a>
