--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@ permalink: /
   <div class="col-xs-10 col-sm-7 col-md-5 col-lg-4 col-xs-offset-1 intro-message">
     <p>Hi there!</p>
 
-    <p>My name is Paul Staab. I have recently finished a PhD in 
-       <a href="http://evol.bio.lmu.de/_statgen/">Statistical Genetics</a> in Munich, Germany. 
-       The <a href="{{"/science/" | prepend: site.baseurl }}">science page</a>
-       will tell you more about my work there, and my vita is on
+    <p>My name is Paul Staab. I am Data Science Consultant working for <a
+       href="http://www.shs-viveon.com">SHS VIVEON</a> in Munich, Germany. 
+       Before, I finished a PhD in 
+       <a href="http://evol.bio.lmu.de/_statgen/">Statistical Genetics</a>. 
+       My complete vita is on
        <a href="https://de.linkedin.com/in/paulstaab">LinkedIn</a>.</p>
 
-    <p>I like coding, answering questions with data and combining
+    <p>I like answering questions with data, coding and combining
        both. Currently <a href="https://www.r-project.org/">R</a> 
        and C++ are my primary languages. Most of what do is on 
        <a href="https://github.com/paulstaab">GitHub</a>.</p>
@@ -45,7 +46,7 @@ permalink: /
     <p>I volunteer as a paramedic for the 
        <a href="http://sued1.bereitschaften.brk-muenchen.de">Red Cross</a>,
        take <a href="{{"/photos/" | prepend: site.baseurl }}">Photos</a>,
-       hike through the Alps or drive my bike all over Munich. 
+       or hike through the Alps. 
        </p>
 
     <p>Follow me on <a href="https://twitter.com/paulstaab">Twitter</a> and
