update link for photos

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ permalink: /
 
     <p>I volunteer as a paramedic for the 
        <a href="http://sued1.bereitschaften.brk-muenchen.de">Red Cross</a>,
-       take <a href="{{"/photos/" | prepend: site.baseurl }}">Photos</a>,
+       take <a href="https://instagram.com/paul.staab">Photos</a>,
        or hike through the Alps. 
        </p>
 
