--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ permalink: /
   <div class="col-xs-10 col-sm-7 col-md-5 col-lg-4 col-xs-offset-1 intro-message">
     <p>Hi there!</p>
 
-    <p>My name is Paul Staab. I am Data Science Consultant working for <a
+    <p>My name is Paul Staab. I am a Data Science Consultant working for <a
        href="http://www.shs-viveon.com">SHS VIVEON</a> in Munich, Germany. 
        Before, I finished a PhD in 
        <a href="http://evol.bio.lmu.de/_statgen/">Statistical Genetics</a>. 
