--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@ permalink: /
 <!-- {% include portfolio.html title="Projects" limit=10 %} -->
 
 <div id="intro-bg"> 
-  <!-- <noscript> --><img src="{{"/assets/img/cover.jpg" | prepend: site.baseurl
-  }}"/><!--</noscript>-->
+   <img src="{{"/assets/img/winter1.jpg" | prepend: site.baseurl }}"/>
 </div>
 
-  {% raw %}
   <!--
+  {% raw %}
   <script type="text/javascript">
   var userFeed = new Instafeed(
       { get: 'user',
@@ -25,15 +24,15 @@ permalink: /
       });
   userFeed.run();
   </script>
-  -->
   {% endraw %}
+  -->
 
 <div class="container mtb intro-container">
 <div class="row">
   <div class="col-xs-10 col-sm-7 col-md-5 col-lg-4 col-xs-offset-1 intro-message">
     <p>Hi there!</p>
 
-    <p>My name is Paul Staab. I am a Data Science Consultant working for <a
+    <p>My name is Paul Staab. I am a Consultant for Data Science and work for <a
        href="http://www.shs-viveon.com">SHS VIVEON</a> in Munich, Germany. 
        Before, I finished a PhD in 
        <a href="http://evol.bio.lmu.de/_statgen/">Statistical Genetics</a>. 
@@ -41,8 +40,9 @@ permalink: /
        <a href="https://de.linkedin.com/in/paulstaab">LinkedIn</a>.</p>
 
     <p>I like answering questions with data, coding and combining
-       both. Currently <a href="https://www.r-project.org/">R</a> 
-       and C++ are my primary languages. Most of what do is on 
+       both. I mostly work with <a href="https://www.r-project.org/">R</a> 
+       and <a href="https://www.scala-lang.org">scala</a>/<a href="https://spark.apache.org/">spark</a>. 
+       Most of my side <a href="/projects">projects</a> are on
        <a href="https://github.com/paulstaab">GitHub</a>.</p>
 
     <p>I volunteer as a paramedic for the 
