--- a/index.html
+++ b/index.html
@@ -32,10 +32,8 @@ permalink: /
        or hike through the Alps. 
        </p>
 
-    <p>Follow me on <a href="https://twitter.com/paulstaab">Twitter</a> and
-       <a href="https://instagram.com/paul.staab">Instagram</a>!</p>
-
-       <p>Or <a id="contact-mail">contact me</a>.</p>
+    <p>Follow me on <a href="https://twitter.com/paulstaab">Twitter</a>
+       or <a id="contact-mail">contact me</a>.</p>
        <script type="text/javascript">document.getElementById("contact-mail").href = 'mailto' + ':contact' + '@' + 'paulstaab.' + 'de';</script>
   </div>
 </div>
