remove link to instagram

--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@ permalink: /
        Most of my side <a href="/projects">projects</a> are on
        <a href="https://github.com/paulstaab">GitHub</a>.</p>
 
-    <p>I volunteer as a paramedic for the 
-       <a href="http://sued1.bereitschaften.brk-muenchen.de">Red Cross</a>,
-       take <a href="https://instagram.com/paul.staab">Photos</a>,
+    <p>In my free time I volunteer as a paramedic for the 
+       <a href="http://sued1.bereitschaften.brk-muenchen.de">Red Cross</a>
        or hike through the Alps. 
        </p>
 
