--- a/index.html
+++ b/index.html
@@ -13,23 +13,24 @@ permalink: /
   <div class="col-xs-10 col-sm-7 col-md-5 col-lg-4 col-xs-offset-1 intro-message">
     <p>Hi there!</p>
 
-    <p>My name is Paul Staab. I am a Consultant for Data Science and work for <a
-       href="http://www.shs-viveon.com">SHS VIVEON</a> in Munich, Germany. 
+    <p>My name is Paul Staab. I am a Consultant for Data Science with focus
+       on creating production-ready Machine Learning systems. 
        Before, I finished a PhD in 
        <a href="http://evol.bio.lmu.de/_statgen/">Statistical Genetics</a>. 
        My complete vita is on
        <a href="https://de.linkedin.com/in/paulstaab">LinkedIn</a>.</p>
 
-    <p>I like answering questions with data, coding and combining
-       both. I mostly work with <a href="https://www.r-project.org/">R</a> 
-       and <a href="https://www.scala-lang.org">scala</a>/<a href="https://spark.apache.org/">spark</a>. 
-       Most of my side <a href="/projects">projects</a> are on
+    <p>I mostly work with <a href="https://spark.apache.org/">Spark</a> 
+       and <a href="https://www.scala-lang.org">Scala</a>, 
+       but use <a href="https://www.python.org/">Python</a> 
+       and <a href="https://www.r-project.org/">R</a>  as well.
+       Some of my side <a href="/projects">projects</a> are on
        <a href="https://github.com/paulstaab">GitHub</a>.</p>
 
-    <p>In my free time I volunteer as a paramedic for the 
+    <p>I am based in Munich, Germany. In my free time I volunteer as a 
+       paramedic for the 
        <a href="http://sued1.bereitschaften.brk-muenchen.de">Red Cross</a>
-       or hike through the Alps. 
-       </p>
+       or hike through the Alps.</p>
 
     <p>Follow me on <a href="https://twitter.com/paulstaab">Twitter</a>
        or <a id="contact-mail">contact me</a>.</p>
