--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@ permalink: /
   <div class="col-xs-10 col-sm-7 col-md-5 col-lg-4 col-xs-offset-1 intro-message">
     <p>Hi there!</p>
 
-    <p>My name is Paul Staab. I am a Consultant for Data Science with focus
-       on creating production-ready Machine Learning systems. 
-       Before, I finished a PhD in 
+    <p>My name is Paul Staab. I am a Consultant for 
+       <a href="https://en.wikipedia.org/wiki/Data_science">Data Science</a> 
+       with focus
+       on creating production-ready 
+       <a href="https://en.wikipedia.org/wiki/Machine_learning">Machine Learning</a> 
+       systems. Before, I finished a PhD in 
        <a href="http://evol.bio.lmu.de/_statgen/">Statistical Genetics</a>. 
        My complete vita is on
        <a href="https://de.linkedin.com/in/paulstaab">LinkedIn</a>.</p>
