--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@ permalink: /
   <div class="col-xs-10 col-sm-7 col-md-5 col-lg-4 col-xs-offset-1 intro-message">
     <p>Hi there!</p>
 
-    <p>My name is Paul Staab. I am a Consultant for 
-       <a href="https://en.wikipedia.org/wiki/Data_science">Data Science</a> 
-       with focus
-       on creating production-ready 
+    <p>My name is Paul Staab. I am a 
+       <a href="https://en.wikipedia.org/wiki/Data_science">Data Scientist</a> 
+       with focus on creating production-ready 
        <a href="https://en.wikipedia.org/wiki/Machine_learning">Machine Learning</a> 
-       systems. Before, I finished a PhD in 
-       <a href="http://evol.bio.lmu.de/_statgen/">Statistical Genetics</a>. 
+       systems working as a consultant for <a href="https://www.mvise.de/">mVISE</a>. 
        My complete vita is on
        <a href="https://de.linkedin.com/in/paulstaab">LinkedIn</a>.</p>
 
