--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@ permalink: /
 
     <p>My name is Paul Staab. I am a 
        <a href="https://en.wikipedia.org/wiki/Data_science">Data Scientist</a> 
-       with focus on creating production-ready 
+       with a focus on creating production-ready 
        <a href="https://en.wikipedia.org/wiki/Machine_learning">Machine Learning</a> 
-       systems working as a consultant for <a href="https://www.mvise.de/">mVISE</a>. 
-       My complete vita is on
+       systems. I currently work for <a href="https://www.mvise.de/">mVISE</a> 
+       as a consultant. My complete vita is on
        <a href="https://de.linkedin.com/in/paulstaab">LinkedIn</a>.</p>
 
     <p>I mostly work with <a href="https://spark.apache.org/">Spark</a> 
