--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ permalink: /
        <a href="http://sued1.bereitschaften.brk-muenchen.de">Red Cross</a>
        or hike through the Alps.</p>
 
-    <p>Follow me on <a href="https://twitter.com/paulstaab">Twitter</a>
-       or <a id="contact-mail">contact me</a>.</p>
+    <p>To get in touch, follow me on <a href="https://twitter.com/paulstaab">Twitter</a>
+       or write an <a id="contact-mail">email</a> (no recruiters please).</p>
        <script type="text/javascript">document.getElementById("contact-mail").href = 'mailto' + ':contact' + '@' + 'paulstaab.' + 'de';</script>
   </div>
 </div>
