--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@ permalink: /blog/
         <! -- BLOG POSTS LIST -->
         <div class="col-lg-8">
 
-            {% for post in site.categories['blog'] %}
+            {% for post in site.posts reversed %}
                 <! -- Blog Post -->
                 {% if post.img.file %}
                 <a href="{{ post.url | prepend: site.baseurl }}">
