--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ permalink: /
 
     <p>My name is Paul Staab. I am a 
        <a href="https://en.wikipedia.org/wiki/Data_science">Data Scientist</a> 
-       with a focus on creating production-ready 
+       and focus on production-ready 
        <a href="https://en.wikipedia.org/wiki/Machine_learning">Machine Learning</a> 
        systems. I currently work for <a href="https://www.mvise.de/">mVISE</a> 
        as a consultant. My complete vita is on
@@ -24,7 +24,7 @@ permalink: /
     <p>I mostly work with <a href="https://spark.apache.org/">Spark</a> 
        and <a href="https://www.scala-lang.org">Scala</a>, 
        but use <a href="https://www.python.org/">Python</a> 
-       and <a href="https://www.r-project.org/">R</a>  as well.
+       and <a href="https://www.r-project.org/">R</a> as well.
        Some of my side <a href="/projects">projects</a> are on
        <a href="https://github.com/paulstaab">GitHub</a>.</p>
 
