--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ permalink: /
        or hike through the Alps.</p>
 
     <p>To get in touch, follow me on <a href="https://twitter.com/paulstaab">Twitter</a>
-       or write an <a id="contact-mail">email</a> (no recruiters please).</p>
+       or write an <a id="contact-mail">email</a>.</p>
        <script type="text/javascript">document.getElementById("contact-mail").href = 'mailto' + ':contact' + '@' + 'paulstaab.' + 'de';</script>
   </div>
 </div>
