--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@ permalink: /
 
     <p>My name is Paul Staab. I am a 
        <a href="https://en.wikipedia.org/wiki/Data_science">Data Scientist</a> 
-       and focus on production-ready 
-       <a href="https://en.wikipedia.org/wiki/Machine_learning">Machine Learning</a> 
-       systems. I currently work for <a href="https://www.mvise.de/">mVISE</a> 
-       as a consultant. My complete vita is on
+       and create data-driven solutions to 
+       <a href="https://en.wikipedia.org/wiki/IT_operations_analytics">automate 
+         the operation of cloud plattforms (AIOps)</a> at
+      <a href="https://www.huawei.com">Huawei</a>.
+      My vita is on
        <a href="https://de.linkedin.com/in/paulstaab">LinkedIn</a>.</p>
 
-    <p>I mostly work with <a href="https://spark.apache.org/">Spark</a> 
-       and <a href="https://www.scala-lang.org">Scala</a>, 
-       but use <a href="https://www.python.org/">Python</a> 
-       and <a href="https://www.r-project.org/">R</a> as well.
-       Some of my side <a href="/projects">projects</a> are on
+    <p>Besides AIOps, I am interested in 
+      <a href="https://en.wikipedia.org/wiki/Bayesian_statistics">Bayesian Statistics</a>, 
+      <a href="https://en.wikipedia.org/wiki/Causal_inference">Causal Inference</a> and 
+      <a href="https://en.wikipedia.org/wiki/Quantified_self">Quantified Self</a>.
+       Some of my <a href="/projects">side projects</a> are on
        <a href="https://github.com/paulstaab">GitHub</a>.</p>
 
     <p>I am based in Munich, Germany. In my free time I volunteer as a 
-       paramedic for the 
+       paramedic for the
        <a href="http://sued1.bereitschaften.brk-muenchen.de">Red Cross</a>
        or hike through the Alps.</p>
 
-    <p>To get in touch, follow me on <a href="https://twitter.com/paulstaab">Twitter</a>
-       or write an <a id="contact-mail">email</a>.</p>
+    <p>I quit almost all social media. To get in contact, best send me an old-fashioned <a id="contact-mail">email</a>.</p>
        <script type="text/javascript">document.getElementById("contact-mail").href = 'mailto' + ':contact' + '@' + 'paulstaab.' + 'de';</script>
   </div>
 </div>
