--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ permalink: /
     <p>I am based in Munich, Germany. In my free time I volunteer as a 
        paramedic for the
        <a href="http://sued1.bereitschaften.brk-muenchen.de">Red Cross</a>
-       or hike through the Alps.</p>
+       and hike through the Alps.</p>
 
     <p>I quit almost all social media. To get in contact, best send me an old-fashioned <a id="contact-mail">email</a>.</p>
        <script type="text/javascript">document.getElementById("contact-mail").href = 'mailto' + ':contact' + '@' + 'paulstaab.' + 'de';</script>
