--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ permalink: /
        <a href="http://sued1.bereitschaften.brk-muenchen.de">Red Cross</a>
        and hike through the Alps.</p>
 
-    <p>I quit almost all social media. To get in contact, best send me an <a id="contact-mail">email</a>.</p>
+    <p>I quit almost all social media. To get in touch, best send me an <a id="contact-mail">email</a>.</p>
        <script type="text/javascript">document.getElementById("contact-mail").href = 'mailto' + ':contact' + '@' + 'paulstaab.' + 'de';</script>
   </div>
 </div>
