--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ permalink: /
 ---
 
 <div id="intro-bg"> 
-  <img src="{{"/assets/img/" | prepend: site.baseurl }}{{ site.wallpaper }}"/>
+  <img src="{{"/assets/img/" | prepend: site.baseurl }}{{ site.wallpaper }}" alt="background-image" />
 </div>
 
 <div class="container mtb intro-container">
