Remove science and project pages

--- a/index.html
+++ b/index.html
@@ -13,13 +13,10 @@ permalink: /
   <div class="col-xs-10 col-sm-7 col-md-5 col-lg-4 col-xs-offset-1 intro-message">
     <p>Hi there!</p>
 
-    <p>My name is Paul Staab. I am a 
+    <p>My name is Paul Staab. I work as a
        <a href="https://en.wikipedia.org/wiki/Data_science">Data Scientist</a> 
-       and create data-driven solutions to 
-       <a href="https://en.wikipedia.org/wiki/IT_operations_analytics">automate 
-         the operation of cloud plattforms (AIOps)</a> at
-      <a href="https://www.huawei.com">Huawei</a>.
-      My vita is on
+       for <a href="https://www.huawei.com">Huawei's</a> AIOps Research Lab.
+       My vita is on
        <a href="https://de.linkedin.com/in/paulstaab">LinkedIn</a>.</p>
 
     <p>I am based in Munich, Germany. In my free time I volunteer as a 
@@ -28,7 +25,7 @@ permalink: /
        and hike through the Alps.</p>
 
     <p>I quit almost all social media. To get in touch, best send me an <a id="contact-mail">email</a>.</p>
-       <script type="text/javascript">document.getElementById("contact-mail").href = 'mailto' + ':contact' + '@' + 'paulstaab.' + 'de';</script>
+       <script type="text/javascript">document.getElementById("contact-mail").href = 'mailto' + ':web' + 'master' + '@' + 'paulstaab.' + 'de';</script>
   </div>
 </div>
 </div>
