Fix LinkedIn URL

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ permalink: /
        <a href="https://en.wikipedia.org/wiki/Data_science">Data Scientist</a> 
        for <a href="https://www.huawei.com">Huawei's</a> AIOps Research Lab.
        My vita is on
-       <a href="https://de.linkedin.com/in/paulstaab">LinkedIn</a>.</p>
+       <a href="https://linkedin.com/in/paulstaab">LinkedIn</a>.</p>
 
     <p>I am based in Munich, Germany. In my free time I volunteer as a 
        paramedic for the
