Add twitter link

--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@ permalink: /
        <a href="http://sued1.bereitschaften.brk-muenchen.de">Red Cross</a>
        and hike through the Alps.</p>
 
-    <p>I quit almost all social media. To get in touch, best send me an <a id="contact-mail">email</a>.</p>
-       <script type="text/javascript">document.getElementById("contact-mail").href = 'mailto' + ':web' + 'master' + '@' + 'paulstaab.' + 'de';</script>
+    <p>To get in touch, contact me on <a href="https://twitter.com/paulstaab">Twitter</a> or 
+       send me an <a id="contact-mail">email</a>.</p>
   </div>
 </div>
 </div>
+
+<script type="text/javascript">document.getElementById("contact-mail").href = 'mai' + 'lto' + ':web' + 'master' + '@paul' + 'staab.' + 'de';</script>
 
