--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 ---
 layout: blog
 title: ML in Production
-permalink: /blog/
+permalink: /blog/index.html
 ---
 
 <div class="container mtb">
@@ -29,9 +29,9 @@ permalink: /blog/
                 <div class="spacing"></div>
             {% endfor %}
 
-        </div><! --/col-lg-8 -->
+        </div>
 
         {% include sidebar.html %}
 
-    </div><! --/row -->
-</div><! --/container -->
+    </div>
+</div>
