--- a/categories.html
+++ b/categories.html
@@ -1,8 +1,9 @@
 ---
 layout: blog
 title: Categories
-permalink: /category/
+permalink: /blog/categories.html
 ---
+
 
 <div class="container mtb">
     <div class="row">
@@ -18,18 +19,18 @@ permalink: /category/
 
                             <li>
                                 <a href="{{ post.url  | prepend: site.baseurl }}"><img src="{{ "/assets/img/blog/thumbs/" | prepend: site.baseurl }}{{ post.thumb }}" alt="Popular Post"></a>
-                                <p><a href="{{ post.url }}">{{ post.title }}</a></p>
+                                <p><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></p>
                                 <em>Posted on {{ post.date | date_to_string }}</em>
                             </li>
                
-            {% endfor %}
-                                                </ul>
-
+                        {% endfor %}
+                  </ul>
 
         {% endunless %}{% endfor %}
-        </div><! --/col-lg-8 -->
+        </div>
 
         {% include sidebar.html %}
 
-    </div><! --/row -->
-</div><! --/container -->
+    </div>
+</div>
+
