Update job details

--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@ permalink: /
     <p>Hi there!</p>
 
     <p>My name is Paul Staab. I work as a
-       <a href="https://en.wikipedia.org/wiki/Data_science">Data Scientist</a> 
-       for <a href="https://www.huawei.com">Huawei's</a> AIOps Research Lab.
+       Machine Learning Engineer for <a href="https://reply.com">Machine Learning Reply</a>.
        My vita is on
        <a href="https://linkedin.com/in/paulstaab">LinkedIn</a>.</p>
 
-    <p>I am based in Munich, Germany. In my free time I volunteer as a 
+      <p>I am based in Munich, Germany. In my free time I volunteer as a 
        paramedic for the
        <a href="http://sued1.bereitschaften.brk-muenchen.de">Red Cross</a>
        and hike through the Alps.</p>
