--- a/blog.html
+++ b/blog.html
@@ -1,17 +1,17 @@
 ---
 layout: blog
-title: ML in Production
-permalink: /blog/
+title: Blog
+permalink: /blog/index.html
 ---
 
 <div class="container mtb">
     <div class="row">
 
-        <! -- BLOG POSTS LIST -->
+        <!-- BLOG POSTS LIST -->
         <div class="col-lg-8">
 
             {% for post in site.posts reversed %}
-                <! -- Blog Post -->
+                <!-- Blog Post -->
                 {% if post.img.file %}
                 <a href="{{ post.url | prepend: site.baseurl }}">
                     <img class="img-responsive" src="{{ "/assets/img/blog/" | prepend: site.baseurl }}{{ post.img.file }}">
@@ -29,9 +29,10 @@ permalink: /blog/
                 <div class="spacing"></div>
             {% endfor %}
 
-        </div><! --/col-lg-8 -->
+        </div>
 
         {% include sidebar.html %}
 
-    </div><! --/row -->
-</div><! --/container -->
+    </div>
+</div>
+
