--- a/categories.html
+++ b/categories.html
@@ -1,14 +1,15 @@
 ---
 layout: blog
 title: Categories
-permalink: /category/
+permalink: /blog/categories.html
 ---
+
 
 <div class="container mtb">
     <div class="row">
         <div class="col-lg-8">
 
-        <! -- BLOG POSTS LIST -->
+        <!-- BLOG POSTS LIST -->
         {% for category in site.categories %}{% unless category.first == "blog" or category.first == "project" or category.first == "publication" %}
 
                 <a class="anchor" id="{{ category.first }}"></a><h4>{{ category.first }}</h4>
@@ -17,19 +18,18 @@ permalink: /category/
                         {% for post in site.categories[category.first] %}
 
                             <li>
-                                <a href="{{ post.url  | prepend: site.baseurl }}"><img src="{{ "/assets/img/blog/thumbs/" | prepend: site.baseurl }}{{ post.thumb }}" alt="Popular Post"></a>
-                                <p><a href="{{ post.url }}">{{ post.title }}</a></p>
+                                <p><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></p>
                                 <em>Posted on {{ post.date | date_to_string }}</em>
                             </li>
                
-            {% endfor %}
-                                                </ul>
-
+                        {% endfor %}
+                  </ul>
 
         {% endunless %}{% endfor %}
-        </div><! --/col-lg-8 -->
+        </div>
 
         {% include sidebar.html %}
 
-    </div><! --/row -->
-</div><! --/container -->
+    </div>
+</div>
+
