--- a/categories.html
+++ b/categories.html
@@ -4,32 +4,23 @@ title: Categories
 permalink: /blog/categories.html
 ---
 
+<h1>{{ page.title }}</h1>
 
-<div class="container mtb">
-    <div class="row">
-        <div class="col-lg-8">
+<!-- BLOG POSTS LIST -->
+{% for category in site.categories %}{% unless category.first == "blog" or category.first == "project" or category.first == "publication" %}
 
-        <!-- BLOG POSTS LIST -->
-        {% for category in site.categories %}{% unless category.first == "blog" or category.first == "project" or category.first == "publication" %}
+	<a class="anchor" id="{{ category.first }}"></a><h2>{{ category.first }}</h2>
+	    <div class="hline"></div>
+	    <ul class="popular-posts">
+		{% for post in site.categories[category.first] %}
 
-                <a class="anchor" id="{{ category.first }}"></a><h4>{{ category.first }}</h4>
-                    <div class="hline"></div>
-                    <ul class="popular-posts">
-                        {% for post in site.categories[category.first] %}
+		    <li>
+			<p><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></p>
+			<em>Posted on {{ post.date | date_to_string }}</em>
+		    </li>
+       
+		{% endfor %}
+	  </ul>
 
-                            <li>
-                                <p><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></p>
-                                <em>Posted on {{ post.date | date_to_string }}</em>
-                            </li>
-               
-                        {% endfor %}
-                  </ul>
-
-        {% endunless %}{% endfor %}
-        </div>
-
-        {% include sidebar.html %}
-
-    </div>
-</div>
+{% endunless %}{% endfor %}
 
