--- a/_posts/2012-10-04-running-r-on-a-supercomputer.html
+++ b/_posts/2012-10-04-running-r-on-a-supercomputer.html
@@ -11,6 +11,7 @@ img:
 ---
 
 <p>After literally months of trial and error, I finally managed to run a large analysis using our program <a href="http://evol.bio.lmu.de/_statgen/software/jaatha/">Jaatha</a> on my new local supercomputer, <a href="http://de.wikipedia.org/wiki/SuperMUC">superMUC</a>. Jaatha is written in <a href="http://www.r-project.org/">R</a> (with the performance critical part implemented in C and C++) and normally does not require a super computer at all. However, we wanted to conduct a huge <a href="https://en.wikipedia.org/wiki/Likelihood-ratio_test">likelihood ratio test</a> using a computationally demanding finite sites model; so it came in handy when Europe's fastest computer opened just a few kilometers away. As there is very little written about running R on a supercomputer, I want to share my solution here so that it may hopefully be a bit easier for others to do something similar.</p>
+<!--more-->
 
 <h2>The Parallelization Model</h2>
 <p>SuperMUC consists of over 18.000 nodes, each of which I imagine of as a separate little computer with 16 cpu cores and it's own RAM. The nodes are connected through a fast network and share a (network) hard disk. As far a I know most supercomputers are build in a similar way.</p>
