--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@ permalink: /blog/index.html
 ---
 
 
-    {% for post in site.posts | sort: 'date' | reverse | limit: 8 %}
+    {% for post in site.posts limit: 4 %}
 	<!-- Blog Post -->
 	{% if post.img.file %}
 	<a href="{{ post.url | prepend: site.baseurl }}">
@@ -17,8 +17,12 @@ permalink: /blog/index.html
 	{% endif %}
 	<a href="{{ post.url | prepend: site.baseurl }}"><h3 class="ctitle">{{ post.title }}</h3></a>
 	<p><csmall>{{ post.date | date: "%b %-d, %Y" }}. | By: {{ post.author }}</csmall></p>
-	{{ post.excerpt }}
+	{% if forloop.first %} 
+	  {{ post.content }}
+	{% else %}
+	  {{ post.excerpt }}
 	<p><a href="{{ post.url | prepend: site.baseurl }}">[Read More]</a></p>
+	{% endif %} 
 	<div class="hline"></div>
 
 	<div class="spacing"></div>
