--- a/_posts/2011-01-27-wlan-abbruche-meiner-fritzbox.html
+++ b/_posts/2011-01-27-wlan-abbruche-meiner-fritzbox.html
@@ -4,8 +4,7 @@ author: Paul
 type: post
 layout: post
 categories:     
-- Linux & Open Source
-- blog
+- Open Source
 ---
 Ich bin gerade etwas ratlos:
 
