--- a/_posts/2012-02-18-netzwerk-sound-server-mit-pulseaudio-mpd.html
+++ b/_posts/2012-02-18-netzwerk-sound-server-mit-pulseaudio-mpd.html
@@ -5,8 +5,7 @@ type: post
 layout: post
 status: publish
 categories:     
-- Linux & Open Source
-- blog
+- Open Source
 ---
 Bei meinem Desktop habe ich aktuell das Problem, dass die analoge Audioausgabe von einem lautem Masserauschen begleitet wird, sobald ich meinen alten Vollverstärker daran anschließe. Das ist mir etwas unheimlich, aber auch ein gründliche Inspektion von Gehäuse und Netzteil brachte nichts ungewöhnliches zu Tage. Als einfachste Lösung erschien mir eine externe USB-Soundkarte anzuschaffen. Die Wahl fiel nach auf eine Behringer Ucontrol UCA202; vor allem wegen des guten Preis-/Leistungsverhältnisses, der geringen Größe und guter Linuxkompatibilität.
 
