--- a/_posts/2010-02-01-alternativen-zu-google.html
+++ b/_posts/2010-02-01-alternativen-zu-google.html
@@ -4,8 +4,7 @@ type: post
 author: Paul
 layout: post
 categories:     
-- Linux & Open Source
-- blog
+- Open Source
 ---
 Ich nutze seit längerem verschiedene Google Dienste, vor allem Google Mail, Calendar &amp; Reader. Und obwohl vermutlich ungefähr genau so lange ein sehr ungutes Gefühl mit der Menge an persönlichen Informationen über mich habe, auf die Google damit problemlos zugreifen kann, konnte ich mich nie richtig dazu durchringen, auf Alternativen dazu umzusteigen. Dies hat vor allem die Gründe, das
 <ol>
