--- a/_posts/2010-09-23-please-please-please-use-bcc-for-mass-mails.html
+++ b/_posts/2010-09-23-please-please-please-use-bcc-for-mass-mails.html
@@ -4,8 +4,7 @@ author: Paul
 type: post
 layout: post
 categories:     
-- Linux & Open Source
-- blog
+- Open Source
 ---
 Today I got an email, which was send to a total of 383 receivers (and was itself only little more than Spam by the way). The author of the mail - apparently someone not so familiar with all this computer things - added all the addresses - including mine - to the normal "Send to:"-field, the field were everyone always adds all the receivers of the mail. So why am i complaining about all this?
 
