Add D&D to hobbies

--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@ permalink: /
        My vita is on
        <a href="https://linkedin.com/in/paulstaab">LinkedIn</a>.</p>
 
-      <p>I am based in Munich, Germany. In my free time I volunteer as a 
-       paramedic for the
+      <p>I am based in Munich, Germany. In my free time I like to play
+       <a href="https://en.wikipedia.org/wiki/Dungeons_&_Dragons">Dungeons & Dragons</a>, 
+       volunteer as a paramedic for the
        <a href="http://sued1.bereitschaften.brk-muenchen.de">Red Cross</a>
-       and hike through the Alps.</p>
+	       and hike through the Alps.</p>
 
     <p>To get in touch, contact me on <a href="https://twitter.com/paulstaab">Twitter</a> or 
        send me an <a id="contact-mail">email</a>.</p>
